build: use add-opens in jar to prevent error on JDK 17 (#1146)